--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "css-cleanup-webpack-plugin": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "rm-unused-css": "^1.1.14",
+    "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --open",
+    "start": "webpack-dev-server --open",
     "build": "webpack --mode production"
   },
   "eslintConfig": {
@@ -42,7 +46,11 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
+    "html-webpack-link-type-plugin": "^1.0.3",
+    "mini-css-extract-plugin": "^0.11.2",
+    "node-sass": "^4.14.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "webpack": "^4.44.1",
