--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "3.4.3",
     "rm-unused-css": "^1.1.14",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
