--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "rm-unused-css": "^1.1.14",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
